# freeRTOS-MSVC-cmake

./: .ccls  .gitignore  CMakeLists.txt
src/: main.c  main.cpp  main.h  main_blinky.c
src/Configuration Files/: FreeRTOSConfig.h  trcConfig.h
src/Demo App Source/: Run-time-stats-utils.c  main.c
src/Demo App Source/Blinky_Demo/: main_blinky.c
src/Demo App Source/FreeRTOS+Trace Recorder/: trcKernelPort.c  trcSnapshotRecorder.c
src/External dependence/: deprecated_definitions.h  mpu_wrappers.h  stack_macros.h  trcHardwarePort.h  trcKernelPort.h  trcPortDefines.h  trcRecorder.h  trcSnapshotConfig.h
src/FreeRTOS/include/: FreeRTOS.h  croutine.h  event_groups.h  list.h  portmacro.h  queue.h  task.h
src/FreeRTOS/src/Portable/: heap_5c.c  port.c
src/demo/: Run-time-stats-utils.c  main.c  trcKernelPort.c  trcKernelPort.h  user.c
src/demo/WIN32-MSVC/: main.c
src/freeRTOS/: FreeRTOS.h  portable.h  tasks.c
src/freeRTOS/portable/: heap_5.c  port.c
src/userInit/: userInit.c  userInit.h
